--- a/Worksheet_set_1/Python worksheet 1.ipynb
+++ b/Worksheet_set_1/Python worksheet 1.ipynb
@@ -9,27 +9,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2e220e12",
-   "metadata": {},
-   "source": [
-    "Q1 "
-   ]
-  },
-  {
    "cell_type": "raw",
    "id": "8605af6c",
    "metadata": {},
    "source": [
-    "Option C - % --> % operator is used to calculate remainder in a division"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7bc97ab3",
-   "metadata": {},
-   "source": [
-    "Q2"
+    "Q1 --> Option C - % --> % operator is used to calculate remainder in a division"
    ]
   },
   {
@@ -37,15 +21,7 @@
    "id": "c26c2d4d",
    "metadata": {},
    "source": [
-    "Option B - 0 --> // operator is used for floor division and it will remove the fractional part so 2//3 will give 0 answer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7913399c",
-   "metadata": {},
-   "source": [
-    "Q3"
+    "Q2 --> Option B - 0 --> // operator is used for floor division and it will remove the fractional part so 2//3 will give 0 answer"
    ]
   },
   {
@@ -53,16 +29,8 @@
    "id": "9190f9df",
    "metadata": {},
    "source": [
-    "Option C - 24 --> <<-left shift operaotr means left shift by n is equal to multiply with pow(2,n) so 6<<2 means left shift by 2 \n",
+    "Q3 --> Option C - 24 --> <<-left shift operaotr means left shift by n is equal to multiply with pow(2,n) so 6<<2 means left shift by 2 \n",
     "                     is equal to multiply with pow(2,2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5106338",
-   "metadata": {},
-   "source": [
-    "Q4"
    ]
   },
   {
@@ -70,15 +38,7 @@
    "id": "7c19728f",
    "metadata": {},
    "source": [
-    "Option A - 2 --> &-Bitwise AND operator means perform AND operation between the binary numbers of the given digits"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37c330ef",
-   "metadata": {},
-   "source": [
-    "Q5"
+    "Q4 --> Option A - 2 --> &-Bitwise AND operator means perform AND operation between the binary numbers of the given digits"
    ]
   },
   {
@@ -86,15 +46,7 @@
    "id": "6781e601",
    "metadata": {},
    "source": [
-    "Option D - 6 --> |-Bitwise OR operator means perform OR operation between the binary numbers of the given digits"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22584288",
-   "metadata": {},
-   "source": [
-    "Q6"
+    "Q5 --> Option D - 6 --> |-Bitwise OR operator means perform OR operation between the binary numbers of the given digits"
    ]
   },
   {
@@ -102,15 +54,7 @@
    "id": "0a74e646",
    "metadata": {},
    "source": [
-    "Option C - the finally block will be executed no matter if the try block raises an error or not."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba097ac8",
-   "metadata": {},
-   "source": [
-    "Q7"
+    "Q6 --> Option C - the finally block will be executed no matter if the try block raises an error or not."
    ]
   },
   {
@@ -118,15 +62,7 @@
    "id": "cca295b2",
    "metadata": {},
    "source": [
-    "Option A - It is used to raise an exception. --> raise keyword is used to raise an exception."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cd862ae",
-   "metadata": {},
-   "source": [
-    "Q8"
+    "Q7 --> Option A - It is used to raise an exception. --> raise keyword is used to raise an exception."
    ]
   },
   {
@@ -134,15 +70,7 @@
    "id": "b1a28cd8",
    "metadata": {},
    "source": [
-    "Option C - in defining a generator --> common use case of yield keyword in python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fbd764e4",
-   "metadata": {},
-   "source": [
-    "Q9"
+    "Q8 --> Option C - in defining a generator --> common use case of yield keyword in python"
    ]
   },
   {
@@ -150,17 +78,9 @@
    "id": "28f46e85",
    "metadata": {},
    "source": [
-    "Option A - _abc  ---> following are the valid variable names\n",
-    "Option B - 1abc\n",
-    "Option C - abc2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c465337",
-   "metadata": {},
-   "source": [
-    "Q10"
+    "Q9 --> Option A - _abc  ---> following are the valid variable names\n",
+    "       Option B - 1abc\n",
+    "       Option C - abc2"
    ]
   },
   {
@@ -168,8 +88,8 @@
    "id": "6be12d41",
    "metadata": {},
    "source": [
-    "Option A - yield  --> following are the keywords in python\n",
-    "Option B - raise"
+    "Q10 --> Option A - yield  --> following are the keywords in python\n",
+    "        Option B - raise"
    ]
   },
   {
