--- a/Worksheet_set_1/Python worksheet 1.ipynb
+++ b/Worksheet_set_1/Python worksheet 1.ipynb
@@ -10,84 +10,29 @@
   },
   {
    "cell_type": "raw",
-   "id": "8605af6c",
-   "metadata": {},
-   "source": [
-    "Q1 --> Option C - % --> % operator is used to calculate remainder in a division"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "c26c2d4d",
-   "metadata": {},
-   "source": [
-    "Q2 --> Option B - 0 --> // operator is used for floor division and it will remove the fractional part so 2//3 will give 0 answer"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "9190f9df",
-   "metadata": {},
-   "source": [
-    "Q3 --> Option C - 24 --> <<-left shift operaotr means left shift by n is equal to multiply with pow(2,n) so 6<<2 means left shift by 2 \n",
-    "                     is equal to multiply with pow(2,2)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "7c19728f",
-   "metadata": {},
-   "source": [
-    "Q4 --> Option A - 2 --> &-Bitwise AND operator means perform AND operation between the binary numbers of the given digits"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "6781e601",
-   "metadata": {},
-   "source": [
-    "Q5 --> Option D - 6 --> |-Bitwise OR operator means perform OR operation between the binary numbers of the given digits"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "0a74e646",
-   "metadata": {},
-   "source": [
-    "Q6 --> Option C - the finally block will be executed no matter if the try block raises an error or not."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "cca295b2",
-   "metadata": {},
-   "source": [
-    "Q7 --> Option A - It is used to raise an exception. --> raise keyword is used to raise an exception."
-   ]
-  },
-  {
-   "cell_type": "raw",
    "id": "b1a28cd8",
    "metadata": {},
    "source": [
-    "Q8 --> Option C - in defining a generator --> common use case of yield keyword in python"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "28f46e85",
-   "metadata": {},
-   "source": [
+    "Q1 --> Option C - % --> % operator is used to calculate remainder in a division\n",
+    "\n",
+    "Q2 --> Option B - 0 --> // operator is used for floor division and it will remove the fractional part so 2//3 will give 0 answer\n",
+    "\n",
+    "Q3 --> Option C - 24 --> <<-left shift operaotr means left shift by n is equal to multiply with pow(2,n) so 6<<2 means left shift by 2 is equal to multiply with pow(2,2)\n",
+    "\n",
+    "Q4 --> Option A - 2 --> &-Bitwise AND operator means perform AND operation between the binary numbers of the given digits\n",
+    "\n",
+    "Q5 --> Option D - 6 --> |-Bitwise OR operator means perform OR operation between the binary numbers of the given digits\n",
+    "\n",
+    "Q6 --> Option C - the finally block will be executed no matter if the try block raises an error or not.\n",
+    "\n",
+    "Q7 --> Option A - It is used to raise an exception. --> raise keyword is used to raise an exception.\n",
+    "\n",
+    "Q8 --> Option C - in defining a generator --> common use case of yield keyword in python\n",
+    "\n",
     "Q9 --> Option A - _abc  ---> following are the valid variable names\n",
     "       Option B - 1abc\n",
-    "       Option C - abc2"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "6be12d41",
-   "metadata": {},
-   "source": [
+    "       Option C - abc2\n",
+    "       \n",
     "Q10 --> Option A - yield  --> following are the keywords in python\n",
     "        Option B - raise"
    ]
