--- a/WEB-SCRAPING ASSIGNMENT - 3.ipynb
+++ b/WEB-SCRAPING ASSIGNMENT - 3.ipynb
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "id": "097bb061",
    "metadata": {},
    "outputs": [],
@@ -2471,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 79,
    "id": "4280cf7f",
    "metadata": {},
    "outputs": [],
@@ -2482,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "id": "64e8b34c",
    "metadata": {},
    "outputs": [],
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "id": "c910115d",
    "metadata": {},
    "outputs": [],
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 82,
    "id": "42024efa",
    "metadata": {},
    "outputs": [],
@@ -2518,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "id": "5377954a",
    "metadata": {},
    "outputs": [],
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "id": "979989c6",
    "metadata": {},
    "outputs": [
@@ -2680,58 +2680,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>595</th>\n",
-       "      <td>586.</td>\n",
+       "      <th>395</th>\n",
+       "      <td>386.</td>\n",
+       "      <td>David Siegel</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>596</th>\n",
-       "      <td>586.</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>60</td>\n",
+       "      <td>United States</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>597</th>\n",
-       "      <td>586.</td>\n",
+       "      <th>396</th>\n",
+       "      <td>386.</td>\n",
+       "      <td>David Velez</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>598</th>\n",
-       "      <td>586.</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>40</td>\n",
+       "      <td>Colombia</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>599</th>\n",
-       "      <td>586.</td>\n",
+       "      <th>397</th>\n",
+       "      <td>398.</td>\n",
+       "      <td>Juergen Blickle</td>\n",
+       "      <td></td>\n",
+       "      <td>75</td>\n",
+       "      <td>Germany</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>398.</td>\n",
+       "      <td>Cheng Xue</td>\n",
+       "      <td></td>\n",
+       "      <td>52</td>\n",
+       "      <td>China</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>398.</td>\n",
+       "      <td>Jack Dangermond</td>\n",
+       "      <td></td>\n",
+       "      <td>76</td>\n",
+       "      <td>United States</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>600 rows × 7 columns</p>\n",
+       "<p>400 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2742,11 +2742,11 @@
        "3      4.                Bill Gates    $129 B  66  United States   \n",
        "4      5.            Warren Buffett    $118 B  91  United States   \n",
        "..    ...                       ...       ...  ..            ...   \n",
-       "595  586.                                                          \n",
-       "596  586.                                                          \n",
-       "597  586.                                                          \n",
-       "598  586.                                                          \n",
-       "599  586.                                                          \n",
+       "395  386.              David Siegel            60  United States   \n",
+       "396  386.               David Velez            40       Colombia   \n",
+       "397  398.           Juergen Blickle            75        Germany   \n",
+       "398  398.                 Cheng Xue            52          China   \n",
+       "399  398.           Jack Dangermond            76  United States   \n",
        "\n",
        "                 Source               Industry  \n",
        "0         Tesla, SpaceX             Automotive  \n",
@@ -2755,16 +2755,16 @@
        "3             Microsoft             Technology  \n",
        "4    Berkshire Hathaway  Finance & Investments  \n",
        "..                  ...                    ...  \n",
-       "595                                             \n",
-       "596                                             \n",
-       "597                                             \n",
-       "598                                             \n",
-       "599                                             \n",
+       "395                                             \n",
+       "396                                             \n",
+       "397                                             \n",
+       "398                                             \n",
+       "399                                             \n",
        "\n",
-       "[600 rows x 7 columns]"
+       "[400 rows x 7 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "id": "e4ef56ad",
    "metadata": {},
    "outputs": [],
